--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+  <!--------------------------Header Section----------------------------->
   <section id="nav-bar">
     <nav class="navbar navbar-expand-lg navbar-light ">
       <a class="navbar-brand" href="#"><img src="images/demo-logo.png "></a>
@@ -43,6 +44,25 @@
         </ul>
       </div>
     </nav>
+  </section>
+
+  <!----------------------------Banner Section---------------------->
+  <section id="banner">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <p class="promo-title">BEST DIGITAL AGENCY</p>
+          <p>Subscirbe to 3 Bits Lab Youtube to watch more videos on website development. Digital Marketing. WordPress
+            and graphics Design.</p>
+          <a href="#">
+            <img src="images/play.png" class="play-btn" />Watch Tutorials
+          </a>
+        </div>
+        <div>
+          <img src="images/641.png" class="img-fluid">
+        </div>
+      </div>
+    </div>
   </section>
 </body>
 
